# Distroforge

./: .editorconfig  .gitattributes  .gitignore  LICENSE  PROVENANCE.md  README.md  pyproject.toml
debian/: README.source  changelog  clean  control  copyright  distroforge-gui.1  distroforge-typer.1  distroforge.1  distroforge.desktop  distroforge.install  distroforge.postinst  docs  examples  gbp.conf  manpages  rules
distroforge/: __init__.py  __main__.py  cli.py  typer_cli.py
docs/: acceptance-matrix.md  advisory-agent.md  architecture.md  artifacts-release-readiness.md  beginner-power-trust-trilogy.md  build-pipeline.md  capture-workflows.md  debian-canonical-compliance.md  debian-ubuntu-python-policy.md  definitions.md  derivative-profiles.md  distroforge-platform-architecture.md  gui-parity.md  maintainer-copilot.md  packaging-release.md  platform-refactor-audit.md  ux-cognitive-ergonomics.md  velocity-responsiveness.md
examples/: composable-profile.toml  composable-profile.yaml  developer-workstation.yaml  minimal-bootstrap.yaml
tests/: test_acceptance_matrix.py  test_advisor_backend.py  test_advisor_proposals.py  test_advisor_registers.py  test_advisory_agent_governance.py  test_app_icon.py  test_branding_compliance.py  test_build_diagnosis.py  test_build_dry_run_options.py  test_build_memory.py  test_build_sequence.py  test_capture_workflows.py  test_chroot.py  test_cli.py  test_command_registry.py  test_command_virtual.py  test_core_smoke.py  test_definitions.py  test_derivative_profile.py  test_doctor.py  test_drivers.py  test_dry_run_host_purity.py  test_glossary.py  test_host_artifacts.py  test_iso_boot_record.py  test_levels.py  test_livefs_iso.py  test_maintainer_grade_features.py  test_mirrors.py  test_noob_trilogy.py  test_packaging_reports.py  test_palette_identity.py  test_phase_contracts.py  (+27 more)
(+257 files in other folders)
