[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distroforge"
version = "0.3.5"
description = "DistroForge builds and customizes Ubuntu/Debian live ISO images."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "DistroForge maintainers" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: System :: Installation/Setup",
]
dependencies = [
  "pluggy>=1.5",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]
typer = [
  "typer>=0.12",
]
gui = [
  "PySide6>=6.7",
]
pyqt6 = [
  "PyQt6>=6.7",
]
all = [
  "pytest>=8.2",
  "ruff>=0.5",
  "typer>=0.12",
  "PySide6>=6.7",
]

[project.scripts]
distroforge = "distroforge.cli:main"
distroforge-typer = "distroforge.typer_cli:run"
distroforge-gui = "distroforge.ui.app:run"

[tool.setuptools]
packages = [
  "distroforge",
  "distroforge.ai",
  "distroforge.commands",
  "distroforge.core",
  "distroforge.data",
  "distroforge.ui",
]

[tool.setuptools.package-data]
distroforge = ["data/*.toml", "data/vulndb.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
